<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>it.pagopa.pn</groupId>
		<artifactId>pn-parent</artifactId>
		<version>2.1.1</version>
		<relativePath />
	</parent>
	<artifactId>pn-templates-engine</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>pn-templates-engine</name>
	<description>Template engine Microservice</description>

	<properties>
		<jacoco.min.line.cover.ratio>0.00</jacoco.min.line.cover.ratio>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.17.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mock-server</groupId>
			<artifactId>mockserver-junit-jupiter</artifactId>
			<version>5.11.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mock-server</groupId>
			<artifactId>mockserver-netty</artifactId>
			<version>5.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
		</dependency>
		<dependency>
			<groupId>it.pagopa.pn</groupId>
			<artifactId>pn-commons</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-pdfbox</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.1</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>1.6.5</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>2.2.24</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<configuration>
					<excludes>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>unpack-dependencies</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>unpack-dependencies</goal>
						</goals>
						<configuration>
							<includeArtifactIds>pn-commons</includeArtifactIds>
							<outputDirectory>${project.build.directory}/dependency-resources</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>5.4.0</version>
				<executions>
					<execution>
						<id>generate-template-internal-api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>generate-resources</phase>
						<configuration>
							<typeMappings>
								<typeMapping>Date=Instant</typeMapping>
							</typeMappings>
							<importMappings>
								<importMapping>java.util.Date=java.time.Instant</importMapping>
								<importMapping>Date=java.time.Instant</importMapping>
							</importMappings>
							<inputSpec>${project.basedir}/docs/openapi/pn-internal-templates-v1.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<library>spring-boot</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<templateDirectory>${project.build.directory}/dependency-resources/scripts/openapi/templates/5.4.0/server</templateDirectory>
							<configOptions>
								<dateLibrary>java11</dateLibrary>
								<delegatePattern>true</delegatePattern>
								<interfaceOnly>true</interfaceOnly>
								<annotationLibrary>none</annotationLibrary>
								<documentationProvider>source</documentationProvider>
								<openApiNullable>false</openApiNullable>
								<reactive>true</reactive>
								<skipDefaultInterface>false</skipDefaultInterface>
								<useTags>true</useTags>
								<basePackage>${project.groupId}.templatesengine.generated.openapi.server.v1</basePackage>
								<modelPackage>${project.groupId}.templatesengine.generated.openapi.server.v1.dto</modelPackage>
								<apiPackage>${project.groupId}.templatesengine.generated.openapi.server.v1.api</apiPackage>
								<configPackage>${project.groupId}.templatesengine.generated.openapi.server.v1.config</configPackage>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>